# ai-for-developers-project-387

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  package-lock.json  package.json  render.yaml  skills-lock.json
api/: main.tsp
backend/: README.md  pyproject.toml
backend/app/: errors.py  main.py  models.py  services.py  storage.py
backend/app/routers/: owner.py  public.py
docs/: booking-domain.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BookingForm.tsx  EventTypeCard.tsx  OwnerEventTypeForm.tsx  SlotPicker.tsx  StatusViews.tsx
frontend/src/pages/: OwnerDashboardPage.tsx  PublicBookingPage.tsx
frontend/src/styles/: app.css
tests/: README.md  conftest.py  pyproject.toml  test_owner_dashboard.py  test_public_booking.py
