[project]
name = "calking-e2e-tests"
version = "0.1.0"
description = "E2E tests for CalKing"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "--browser chromium"
base_url = "http://127.0.0.1:5173"
